add token support
